fixed bottom layout alignments and refactoring is completed

--- a/bp-web-client/angular-app/src/assets/scss/styles.scss
+++ b/bp-web-client/angular-app/src/assets/scss/styles.scss
@@ -1,6 +1,11 @@
 @import "header.css";
 
 $standardYellow: #ffea7a;
+html,
+body {
+  height: 100%;
+}
+
 body {
   background-color: #222;
 }
@@ -2955,15 +2960,7 @@ html,
 body {
   font-size: 14.994px;
 }
-.d-flex {
-  display: flex;
-}
-.j-c-s-b {
-  justify-content: space-between;
-}
-.a-center {
-  align-items: center;
-}
+
 @media only screen and (min-width: 321px) {
   html,
   body {
@@ -3093,16 +3090,17 @@ td.actions {
   padding: 1rem 1.5rem 1.5rem 1.5rem;
 }
 .socialMediaLinksTop {
-  position: absolute;
-  right: 30px;
-  width: 40px;
-  top: 60%;
-  transform: translateY(-50%);
-  z-index: 99999;
+  // position: absolute;
+  // right: 30px;
+  width: 35px;
+  // top: 60%;
+  // transform: translateY(-50%);
+  // z-index: 99999;
 
   li {
     list-style: none;
     margin: 0 0 20px 0;
+    text-align: center;
     a {
       color: #fff;
       i {
@@ -3383,4 +3381,79 @@ td.actions {
       }
     }
   }
+}
+
+// Layout refactoring code starts here
+
+.headerTheme {
+  width: 100%;
+  height: 100vh;
+  padding: 0 !important;
+  position: fixed;
+  background: red;
+  top: 0;
+  z-index: 1;
+
+  .header {
+    width: 100%;
+    padding: 0;
+    height: 220px;
+    background: red;
+  }
+  .bodyContent {
+    width: 100%;
+    height: calc(100% - 370px);
+    background: lime;
+    padding: 0px !important;
+
+    .socialMediaIcons,
+    .contentArea {
+      height: 100%;
+      background: pink;
+    }
+    .contentArea {
+      width: 100%;
+
+      .content {
+        width: 100%;
+        &.bottom {
+          text-align: center;
+        }
+        h2 {
+          font-size: 2rem;
+          font-weight: 500;
+
+          strong {
+            color: cornflowerblue;
+          }
+        }
+      }
+    }
+    .socialMediaIcons {
+      background: green;
+    }
+  }
+}
+
+.d-flex {
+  display: flex;
+}
+
+.j-c-s-b {
+  justify-content: space-between;
+}
+.flexWrap {
+  flex-wrap: wrap;
+}
+.a-center {
+  align-items: center;
+}
+.a-bottom {
+  align-items: end;
+}
+.customContainer {
+  width: 100%;
+  padding: 0px 1em;
+  max-width: 65rem;
+  margin: 0px auto;
 }
